# ffagent

./: .gitignore  AGENTS.md  Makefile  README.md  README_EN.md  electron-builder.yml  index.html  package-lock.json  package.json  vite.config.ts  安装后签名.sh
.github/workflows/: release.yml
agent/: .gitignore  Makefile  go.mod  go.sum  main.go
agent/configs/: config.toml
agent/internal/ai/: agent.go  agent_test.go  chat.go  client.go  output_paths.go  tools.go
agent/internal/app/: app.go  wire.go  wire_gen.go
agent/internal/conf/: config.go  default.go  test.toml
agent/internal/core/chat/: core.go  message.go  message.model.go  message.param.go  model.go  session.go  session.model.go  session.param.go
agent/internal/core/config/: config.go  config.model.go  config.param.go  core.go  model.go
agent/internal/core/metadata/: core.go  doc.go  metadata.go  metadata.model.go  metadata.param.go  model.go
agent/internal/data/: provider.go
agent/internal/pkg/ffmpeg/: executor.go  executor_test.go  (+3 more)
docs/: transcode-flow.md
electron/: main.ts  preload.ts  tsconfig.json
resources/: icon.icns
scripts/: test-config-http.sh
src/: App.css  App.tsx  electron.d.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: agent.toml
src-tauri/src/: lib.rs  main.rs
src/components/: AttachmentBar.tsx  ChatWindow.tsx  FileLink.tsx  Sidebar.tsx
src/locales/: en-US.json  zh-CN.json
src/pages/: ChatPage.tsx  SettingsPage.tsx
src/services/: api.ts  i18n.ts  port.ts  sse.ts
(+22 files in other folders)
